# simple-chart

./: .gitignore  AGENT-SETUP.md  AGENTS.md  README.md  io.simplechart.SimpleChart.desktop  main.py  performance_proposal.md  plugin-api-plan.md  pyproject.toml  specification.txt
.claude/skills/: new-indicator.md
.grok/skills/: new-indicator.md
app/: controller.py  indicator_config.py  state.py  symbol_bar.py  watchlist.py
chart/: interactions.py  legend.py  panel.py  plot_manager.py  styles.py  viewport.py  window.py
data/: aggregator.py  cache.py  calendar.py  models.py  schema.sql
data/provider/: __init__.py  base.py  yfinance_provider.py
indicators/: _base.py  _loader.py  _registry.py  base.py  registry.py  rsi.py  sma.py
indicators/_fast/: avwap.py  ma.py
indicators/avwap/: __init__.py  _kernel.py
indicators/ema/: __init__.py  _kernel.py
plugins/: __init__.py  example_plugin.py
plugins/builtin/: __init__.py  avwap.py  ema.py  sma.py
scripts/: build_compiled.py  install_linux_desktop.py
simplechart/: __init__.py  api.py
tests/: test_cache_anchors.py  test_yfinance_provider.py
